# miniPIC

./: .gitignore  CMakeLists.txt  Diagnostics.hpp  FieldSolver.hpp  FieldsCls.hpp  GridCLs.hpp  README.md  main.cpp  main_plot.py  plot_fields.py
DOXY/: Doxyfile  Doxyfile_eng.txt
Diagnostics/: CMakeLists.txt  Diagnostics.cpp  Diagnostics.hpp
Fields/: CMakeLists.txt  FieldSolver.cpp  FieldSolver.hpp  FieldsCls.cpp  FieldsCls.hpp  GridCLs.hpp
src/: CMakeLists.txt  README.md  main.cpp  main_plot.py
src/Diagnostics/: CMakeLists.txt  Diagnostics.cpp  Diagnostics.hpp
src/Fields/: CMakeLists.txt  FieldSolver.cpp  FieldSolver.hpp  FieldsCls.cpp  FieldsCls.hpp
src/World/: Makefile  clsWorld.cpp  clsWorld.hpp  main.cpp
vismodule/: __init__.py  libPlotFuncs.py  libReadData.py
visualization/: main_plot.py  video_plot.py
visualization/vismodule/: libPlotFuncs.py  libReadData.py
